--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en" class=" chtiswmm idc0_343 jnpozdvbg"><head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,24 +8,23 @@
     <link rel="stylesheet" href="static/css/signup.css">
     <link rel="stylesheet" href="static/css/style.css">
 </head>
-<body>
-
+<body data-new-gr-c-s-check-loaded="14.1094.0" data-gr-ext-installed="">
     <header>
         <div class="header">
             <div class="container-fluid">
                 <nav class="navbar navbar-expand-lg custom_nav-container" style="height: 36px;">
-                    <a class="navbar-brand" href="{{ url_for('home') }}">SOENG</a>
+                    <a class="navbar-brand" href="/home">SOENG</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class=""> </span>
                       </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav  ">
                             <li class="nav-item active">
-                                <a class="nav-link" href="{{ url_for('home') }}">Home</a>
+                                <a class="nav-link" href="/home">Home</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('about') }}">About</a>
+                                <a class="nav-link" href="/about">About</a>
                             </li>
 
                             <li class="nav-item">
@@ -35,11 +32,11 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('feedback') }}">Feedback</a>
+                                <a class="nav-link" href="/feedback">Feedback</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('signin') }}">SignIn</a>
+                                <a class="nav-link" href="/signin">SignIn</a>
                             </li>
                         </ul>
                     </div>
@@ -49,92 +46,69 @@
     </header>
 
     <div class="registration-form">
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
->>>>>>> b1092f22f85289fa3a93ccdfb8eef1a8b5a26266
->>>>>>> 5bbc9384632118126c9d55fd89405ebb4145fa2d
         <!-- Flashed Messages -->
-        {% with messages = get_flashed_messages(with_categories=true) %}
-          {% if messages %}
-            <div class="container">
-              {% for category, message in messages %}
-                <div class="alert alert-{{ category }}">{{ message }}</div>
-              {% endfor %}
-            </div>
-          {% endif %}
-        {% endwith %}
+        
+          
+        
     
-        <form action="/signup" method="POST">
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-=======
-=======
-        <form action="{{ url_for('signup') }}" method="POST">
-
->>>>>>> 22d1703718ea7680db647157ae0913586ce88388
->>>>>>> b1092f22f85289fa3a93ccdfb8eef1a8b5a26266
->>>>>>> 5bbc9384632118126c9d55fd89405ebb4145fa2d
+        <form action="/signup" method="POST" style="
+    padding-bottom: 40px;
+">
             <div class="form-icon">
                 <span><i class="icon icon-user"></i></span>
             </div>
     
-            <div class="form-group">
-                <input type="text" class="form-control item" id="fname" name="fname" placeholder="First Name" required>
+            <div class="form-group" style="
+    padding-bottom: 1px;
+    margin-bottom: 1px;
+">
+                <input type="text" class="form-control item" id="fname" name="fname" placeholder="First Name" required="">
             </div>
     
-            <div class="form-group">
-                <input type="text" class="form-control item" id="lname" name="lname" placeholder="Last Name" required>
+            <div class="form-group" style="
+    margin-bottom: 1px;
+    padding-top: 5px;
+    padding-bottom: 1px;
+">
+                <input type="text" class="form-control item" id="lname" name="lname" placeholder="Last Name" required="">
             </div>
     
-            <div class="form-group">
-                <input type="email" class="form-control item" id="email" name="email" placeholder="Email Address" required style="margin-bottom: 5px;">
-                <p style="font-size: 12px; margin-top: 5px; padding-left: 20px;">{{ message }}</p>
-            </div>
-    
-            <div class="form-group">
-                <input type="password" class="form-control item" id="password" name="password" placeholder="Password" required style="margin-bottom: 5px;">
+            <div class="form-group" style="
+    margin-bottom: 1px;
+    padding-top: 5px;
+    padding-bottom: 1px;
+    height: 48px;
+">
+                <input type="email" class="form-control item" id="email" name="email" placeholder="Email Address" required="" style="margin-bottom: 5px;">
                 <p style="font-size: 12px; margin-top: 5px; padding-left: 20px;"></p>
             </div>
     
-            <div class="form-group">
-                <input type="password" class="form-control item" id="confirm-password" name="confirm_password" placeholder="Confirm Password" required style="margin-bottom: 5px;">
-                <p id="password-match-message" style="font-size: 12px; margin-top: 5px; padding-left: 20px;"></p>
+            <div class="form-group" style="
+    padding-top: 5px;
+    margin-bottom: 1px;
+    height: 52px;
+    padding-bottom: 1px;
+">
+                <input type="password" class="form-control item" id="password" name="password" placeholder="Password" required="" style="margin-bottom: 1px;">
+                <p style="font-size: 12px; margin-top: 5px; padding-left: 20px;"></p>
             </div>
-<<<<<<< HEAD
     
-=======
-<<<<<<< HEAD
+            <div class="form-group" style="
+    margin-bottom: 1px;
+    padding-top: 5px;
+    padding-bottom: 1px;
+    height: 52px;
+">
+                <input type="password" class="form-control item" id="confirm-password" name="confirm_password" placeholder="Confirm Password" required="" style="margin-bottom: 1px;">
+                <p id="password-match-message" style="font-size: 12px; margin-top: 5px; padding-left: 20px; color: red;">Password must be at least 8 characters</p>
+            </div>
     
-=======
-<<<<<<< HEAD
-    
-=======
-
->>>>>>> 22d1703718ea7680db647157ae0913586ce88388
->>>>>>> b1092f22f85289fa3a93ccdfb8eef1a8b5a26266
->>>>>>> 5bbc9384632118126c9d55fd89405ebb4145fa2d
             <script>
                 document.getElementById('confirm-password').addEventListener('input', function() {
                     var password = document.getElementById('password').value;
                     var confirmPassword = this.value;
                     var message = document.getElementById('password-match-message');
-<<<<<<< HEAD
     
-=======
-<<<<<<< HEAD
-    
-=======
-<<<<<<< HEAD
-    
-=======
-
->>>>>>> 22d1703718ea7680db647157ae0913586ce88388
->>>>>>> b1092f22f85289fa3a93ccdfb8eef1a8b5a26266
->>>>>>> 5bbc9384632118126c9d55fd89405ebb4145fa2d
                     if (password.length < 8) {
                         message.textContent = 'Password must be at least 8 characters';
                         message.style.color = 'red';
@@ -146,36 +120,12 @@
                         message.style.color = 'red';
                     }
                 });
-<<<<<<< HEAD
     
-=======
-<<<<<<< HEAD
-    
-=======
-<<<<<<< HEAD
-    
-=======
-
->>>>>>> 22d1703718ea7680db647157ae0913586ce88388
->>>>>>> b1092f22f85289fa3a93ccdfb8eef1a8b5a26266
->>>>>>> 5bbc9384632118126c9d55fd89405ebb4145fa2d
                 document.querySelector('form').addEventListener('submit', function(event) {
                     var password = document.getElementById('password').value;
                     var confirmPassword = document.getElementById('confirm-password').value;
                     var message = document.getElementById('password-match-message');
-<<<<<<< HEAD
     
-=======
-<<<<<<< HEAD
-    
-=======
-<<<<<<< HEAD
-    
-=======
-
->>>>>>> 22d1703718ea7680db647157ae0913586ce88388
->>>>>>> b1092f22f85289fa3a93ccdfb8eef1a8b5a26266
->>>>>>> 5bbc9384632118126c9d55fd89405ebb4145fa2d
                     if (password !== confirmPassword) {
                         event.preventDefault();
                         message.textContent = 'Passwords do not match';
@@ -183,39 +133,18 @@
                     }
                 });
             </script>
-<<<<<<< HEAD
     
-=======
-<<<<<<< HEAD
-    
-=======
-<<<<<<< HEAD
-    
-=======
-
->>>>>>> 22d1703718ea7680db647157ae0913586ce88388
->>>>>>> b1092f22f85289fa3a93ccdfb8eef1a8b5a26266
->>>>>>> 5bbc9384632118126c9d55fd89405ebb4145fa2d
-            <div class="form-group">
+            <div class="form-group" style="
+    margin-bottom: 1px;
+    padding-top: 20px;
+">
                 <button type="submit" class="btn btn-block submit">Submit</button>
             </div>
     
         </form>
     </div>
-<<<<<<< HEAD
     
-=======
-<<<<<<< HEAD
-    
-=======
-<<<<<<< HEAD
-    
-=======
-
->>>>>>> 22d1703718ea7680db647157ae0913586ce88388
->>>>>>> b1092f22f85289fa3a93ccdfb8eef1a8b5a26266
->>>>>>> 5bbc9384632118126c9d55fd89405ebb4145fa2d
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
-</body>
-</html>
+
+<grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration></body></html>
