--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}base{% endblock %}</title>
+    {% block head %}
     <link rel="stylesheet" href="{{ url_for('static', filename='../static/css/style.css') }}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    {% endblock %}
 </head>
 <body>
     <header>
@@ -15,47 +17,44 @@
                     <a class="navbar-brand" href="{{ url_for('home') }}">SOENG</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class=""> </span>
-                      </button>
+                    </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav  ">
+                        <ul class="navbar-nav ml-auto">
                             <li class="nav-item active">
                                 <a class="nav-link" href="{{ url_for('home') }}">
-                                    Home
-                                <span class="sr-only">(current)</span>
+                                    Home <span class="sr-only">(current)</span>
                                 </a>
                             </li>
-
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ url_for('about') }}">About</a>
                             </li>
-
                             <li class="nav-item">
                                 <a class="nav-link" href="https://github.com/Devcavi19/SE-CS3110-Project" target="_blank">Github</a>
                             </li>
-
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ url_for('feedback') }}">Feedback</a>
                             </li>
-
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('signin') }}">SignIn</a>
-                            </li>
-
+                            {% if session.get('user_id') %}
+                                <li class="nav-item">
+                                    <span class="nav-link">Welcome, {{ session.get('fname', '') }}!</span>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                                </li>
+                            {% else %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{{ url_for('signin') }}">SignIn</a>
+                                </li>
+                            {% endif %}
                         </ul>
+
                     </div>
                 </nav>
             </div>
         </div>
     </header>
 
-    <div class="parent-container">
-        <div class="welcome" style="height: 300px;">
-            <h2>WELCOME TO</h2>
-            <h2>VEHICLE TRAFFIC SIMULATOR</h2>
-            <p>A project by Herald and Jester</p>
-            <a href="{{ url_for('simulation') }}" class="btn">Start Simulation</a>
-        </div>
-    </div>
+    {% block content %}{% endblock %}
 
     <footer>
         <p>© 2024 Vehicle Traffic Simulator</p>
