--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -1,65 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}base{% endblock %}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='../static/css/style.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='../static/css/feedback.css') }}">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
-<body>
-    <header>
-        <div class="header">
-            <div class="container-fluid">
-                <nav class="navbar navbar-expand-lg custom_nav-container" style="height: 36px;">
-                    <a class="navbar-brand" href="{{ url_for('home') }}">SOENG</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class=""> </span>
-                      </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav  ">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="{{ url_for('home') }}">
-                                    Home
-                                <span class="sr-only">(current)</span>
-                                </a>
-                            </li>
+{% extends "base.html" %}
 
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('about') }}">About</a>
-                            </li>
+{% block title %}Feedback{% endblock %}
 
-                            <li class="nav-item">
-                                <a class="nav-link" href="https://github.com/Devcavi19/SE-CS3110-Project" target="_blank">Github</a>
-                            </li>
+{% block head %}
+{{ super() }}
+<link rel="stylesheet" href="static/css/feedback.css">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" rel="stylesheet">
+{% endblock %}
 
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('feedback') }}">Feedback</a>
-                            </li>
-
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('signin') }}">SignIn</a>
-                            </li>
-
-                        </ul>
-                    </div>
-                </nav>
-            </div>
-        </div>
-    </header>
-
-    <div class="feedback-form-container">
-        <form>      
-            <input name="name" type="text" class="feedback-input" placeholder="Name" />   
-            <input name="email" type="text" class="feedback-input" placeholder="Email" />
-            <textarea name="text" class="feedback-input" placeholder="Comment"></textarea>
-            <input type="submit" value="SUBMIT" class="btn"/>
-        </form>
+{% block content %}
+<div class="feedback-form-container">
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-success">{{ message }}</div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+    
+    <div class="form-icon">
+        <span><i class="icon icon-envelope"></i></span>
     </div>
-
-    <footer>
-        <p>© 2024 Vehicle Traffic Simulator</p>
-    </footer>
-</body>
-</html>
+    <form action="/feedback" method="POST">      
+        <div class="form-group">
+            <input name="name" type="text" class="form-control item" placeholder="Name" required/>   
+        </div>
+        <div class="form-group">
+            <input name="email" type="email" class="form-control item" placeholder="Email" required/>
+        </div>
+        <div class="form-group">
+            <textarea name="message" class="form-control item" placeholder="Your Message" required></textarea>
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-block submit">Send Feedback</button>
+        </div>
+    </form>
+</div>
+{% endblock %}
