--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,71 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>User sign in</title>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<link rel="stylesheet" href="static/css/signin.css">
-<link rel="stylesheet" href="static/css/style.css">
-</head>
-<body>
-  
-    <header>
-        <div class="header">
-            <div class="container-fluid">
-                <nav class="navbar navbar-expand-lg custom_nav-container" style="height: 36px;">
-                    <a class="navbar-brand" href="{{ url_for('home') }}">SOENG</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class=""> </span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav  ">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="{{ url_for('home') }}">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('about') }}">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="https://github.com/Devcavi19/SE-CS3110-Project" target="_blank">Github</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('feedback') }}">Feedback</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('signin') }}">SignIn</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
+{% extends "base.html" %}
+
+{% block title %}Sign In{% endblock %}
+
+{% block head %}
+    {{ super() }}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/signin.css') }}">
+{% endblock %}
+
+{% block content %}
+<div class="login-container" style="top: 120px;">
+    <form action="/signin" method="POST" id="loginForm">
+        <div class="login-field" style="padding-bottom: 1px;">
+            <label for="email">Email:</label>
+            <input type="text" id="email" name="email" required style="padding-bottom: 1px;">
         </div>
-    </header>
-
-  <div class="login-container" style="top: 120px;">
-    <form action="/signin" method="POST">
-      <div class="login-field">
-          <label for="email">Email:</label>
-          <input type="text" id="email" name="email" required>
-      </div>
-      <div class="login-field">
-          <label for="password">Password:</label>
-          <input type="password" id="password" name="password" required>
-      </div>
-      <button class="signin-button" type="submit">Sign in</button>
-      <button class="signup-button" type="button" onclick="signup()">Sign up</button>
+        <div class="login-field" style="padding-bottom: 1px;">
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required style="padding-bottom: 1px;">
+        </div>
+        <button class="signin-button" type="submit" id="signinButton" disabled>Sign in</button>
+        <button class="signup-button" type="button" onclick="signup()">Sign up</button>
     </form>
-    {% if message %}
-    <p style="color: red;">{{ message }}</p>
-    {% endif %}
-  </div>
+</div>
 
-  <script>
-    function signup() {
-        window.location.href = "/signup";  // Redirects to the signup page
-    }
-  </script>
-
-</body>
-</html>
+<script src="{{ url_for('static', filename='../static/js/signin.js') }}"></script>
+{% endblock %}
