--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,150 +1,56 @@
-<html lang="en" class=" chtiswmm idc0_343 jnpozdvbg"><head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>User sign up</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/css/signup.css">
-    <link rel="stylesheet" href="static/css/style.css">
-</head>
-<body data-new-gr-c-s-check-loaded="14.1094.0" data-gr-ext-installed="">
-    <header>
-        <div class="header">
-            <div class="container-fluid">
-                <nav class="navbar navbar-expand-lg custom_nav-container" style="height: 36px;">
-                    <a class="navbar-brand" href="/home">SOENG</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class=""> </span>
-                      </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav  ">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="/home">Home</a>
-                            </li>
+{% extends "base.html" %}
 
-                            <li class="nav-item">
-                                <a class="nav-link" href="/about">About</a>
-                            </li>
+{% block title %}Sign Up{% endblock %}
 
-                            <li class="nav-item">
-                                <a class="nav-link" href="https://github.com/Devcavi19/SE-CS3110-Project" target="_blank">Github</a>
-                            </li>
+{% block head %}
+{{ super() }}
+<link rel="stylesheet" href="static/css/signup.css">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" rel="stylesheet">
+{% endblock %}
 
-                            <li class="nav-item">
-                                <a class="nav-link" href="/feedback">Feedback</a>
-                            </li>
+{% block content %}
+<div class="registration-form">
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-danger">{{ message }}</div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
 
-                            <li class="nav-item">
-                                <a class="nav-link" href="/signin">SignIn</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
+    <form action="/signup" method="POST" style="padding-bottom: 40px;">
+        <div class="form-icon" style="margin-bottom: 1px; height: 60px;">
+            <span><i class="icon icon-user"></i></span>
         </div>
-    </header>
 
-    <div class="registration-form">
-        <!-- Flashed Messages -->
-        
-          
-        
-    
-        <form action="/signup" method="POST" style="
-    padding-bottom: 40px;
-">
-            <div class="form-icon">
-                <span><i class="icon icon-user"></i></span>
-            </div>
-    
-            <div class="form-group" style="
-    padding-bottom: 1px;
-    margin-bottom: 1px;
-">
-                <input type="text" class="form-control item" id="fname" name="fname" placeholder="First Name" required="">
-            </div>
-    
-            <div class="form-group" style="
-    margin-bottom: 1px;
-    padding-top: 5px;
-    padding-bottom: 1px;
-">
-                <input type="text" class="form-control item" id="lname" name="lname" placeholder="Last Name" required="">
-            </div>
-    
-            <div class="form-group" style="
-    margin-bottom: 1px;
-    padding-top: 5px;
-    padding-bottom: 1px;
-    height: 48px;
-">
-                <input type="email" class="form-control item" id="email" name="email" placeholder="Email Address" required="" style="margin-bottom: 5px;">
-                <p style="font-size: 12px; margin-top: 5px; padding-left: 20px;"></p>
-            </div>
-    
-            <div class="form-group" style="
-    padding-top: 5px;
-    margin-bottom: 1px;
-    height: 52px;
-    padding-bottom: 1px;
-">
-                <input type="password" class="form-control item" id="password" name="password" placeholder="Password" required="" style="margin-bottom: 1px;">
-                <p style="font-size: 12px; margin-top: 5px; padding-left: 20px;"></p>
-            </div>
-    
-            <div class="form-group" style="
-    margin-bottom: 1px;
-    padding-top: 5px;
-    padding-bottom: 1px;
-    height: 52px;
-">
-                <input type="password" class="form-control item" id="confirm-password" name="confirm_password" placeholder="Confirm Password" required="" style="margin-bottom: 1px;">
-                <p id="password-match-message" style="font-size: 12px; margin-top: 5px; padding-left: 20px; color: red;">Password must be at least 8 characters</p>
-            </div>
-    
-            <script>
-                document.getElementById('confirm-password').addEventListener('input', function() {
-                    var password = document.getElementById('password').value;
-                    var confirmPassword = this.value;
-                    var message = document.getElementById('password-match-message');
-    
-                    if (password.length < 8) {
-                        message.textContent = 'Password must be at least 8 characters';
-                        message.style.color = 'red';
-                    } else if (password === confirmPassword) {
-                        message.textContent = 'Passwords match';
-                        message.style.color = 'green';
-                    } else {
-                        message.textContent = 'Passwords do not match';
-                        message.style.color = 'red';
-                    }
-                });
-    
-                document.querySelector('form').addEventListener('submit', function(event) {
-                    var password = document.getElementById('password').value;
-                    var confirmPassword = document.getElementById('confirm-password').value;
-                    var message = document.getElementById('password-match-message');
-    
-                    if (password !== confirmPassword) {
-                        event.preventDefault();
-                        message.textContent = 'Passwords do not match';
-                        message.style.color = 'red';
-                    }
-                });
-            </script>
-    
-            <div class="form-group" style="
-    margin-bottom: 1px;
-    padding-top: 20px;
-">
-                <button type="submit" class="btn btn-block submit">Submit</button>
-            </div>
-    
-        </form>
-    </div>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
+        <div class="form-group" style="padding-bottom: 1px; margin-bottom: 1px;">
+            <input type="text" class="form-control item" id="fname" name="fname" placeholder="First Name" required>
+        </div>
 
-<grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration></body></html>
+        <div class="form-group" style="margin-bottom: 1px; padding-top: 5px; padding-bottom: 1px;">
+            <input type="text" class="form-control item" id="lname" name="lname" placeholder="Last Name" required>
+        </div>
+
+        <div class="form-group" style="margin-bottom: 1px; padding-top: 5px; padding-bottom: 1px; height: 48px;">
+            <input type="email" class="form-control item" id="email" name="email" placeholder="Email Address" required style="margin-bottom: 5px;">
+            <p style="font-size: 12px; margin-top: 5px; padding-left: 20px;"></p>
+        </div>
+
+        <div class="form-group" style="padding-top: 5px; margin-bottom: 1px; height: 52px; padding-bottom: 1px;">
+            <input type="password" class="form-control item" id="password" name="password" placeholder="Password" required style="margin-bottom: 1px;">
+            <p style="font-size: 12px; margin-top: 5px; padding-left: 20px;"></p>
+        </div>
+
+        <div class="form-group" style="margin-bottom: 1px; padding-top: 5px; padding-bottom: 1px; height: 52px;">
+            <input type="password" class="form-control item" id="confirm-password" name="confirm_password" placeholder="Confirm Password" required style="margin-bottom: 1px;">
+            <p id="password-match-message" style="font-size: 12px; margin-top: 5px; padding-left: 1px; color: red; display: none;">Passwords do not match</p>
+        </div>
+
+        <div class="form-group" style="margin-bottom: 1px; padding-top: 20px;">
+            <button type="submit" class="btn btn-block submit">Submit</button>
+        </div>
+    </form>
+</div>
+
+<script src="{{ url_for('static', filename='../static/js/signup.js') }}"></script>
+{% endblock %}
